// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Container Align Content 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 hdvqjv"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 ehDTEb"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jvLvcr"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 cuJYBn"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bolOKz"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 hGCJjf"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 hdvqjv"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container Align Items 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 aikND"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 cGdGLf"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fvNXOz"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jNBmaP"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jymBn"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container Border Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 cIafcW"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bUCNJD"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 efAnVk"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 dscWBR"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 hcTauu"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 gpvJbb"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 chHflw"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bujNSd"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 feZRKG"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 gxzwpi"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bSZQkj"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jmBaUl"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 eUBCCL"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container Border Radiuses 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 iOpDas"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 hreKKh"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bztDQk"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 kcleyB"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container Direction 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 kMDWSL"
    direction="row"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 koWBgW"
    direction="row-reverse"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 hQIRxT"
    direction="column"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 kGqxYm"
    direction="column-reverse"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container Justify Content 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 bFLlEb"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 PYbSP"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 dMDdSj"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fZpthT"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bbhEuz"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fupJIX"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 iONyDL"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container M Align Content 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 hdvqjv"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 ehDTEb"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jvLvcr"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 cuJYBn"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bolOKz"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 hGCJjf"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 hdvqjv"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container M Align Items 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 aikND"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 cGdGLf"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fvNXOz"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jNBmaP"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jymBn"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container M Direction 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 kMDWSL"
    direction="row"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 koWBgW"
    direction="row-reverse"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 hQIRxT"
    direction="column"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 kGqxYm"
    direction="column-reverse"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container M Justify Content 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 bFLlEb"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 PYbSP"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 dMDdSj"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fZpthT"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bbhEuz"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fupJIX"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 iONyDL"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container M Spaces 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 kyNdJw"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 boBDMA"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bLTASY"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 cyJeok"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jUsGKs"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 vIhMA"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fRIviY"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jLyfhg"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container Spaces 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 kyNdJw"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 boBDMA"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 bLTASY"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 cyJeok"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jUsGKs"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 vIhMA"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fRIviY"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 jLyfhg"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
  >
    This is a Child!
  </div>
</div>
`;

exports[`Storyshots Layout/Container Wrap 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kazc2j-0 jLQQwj"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
    wrap="nowrap"
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 kElGTC"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
    wrap="wrap"
  >
    This is a Child!
  </div>
  <div
    className="sc-kazc2j-0 fLJWin"
    style={
      Object {
        "bottom": undefined,
        "left": undefined,
        "right": undefined,
        "top": undefined,
      }
    }
    wrap="wrap-reverse"
  >
    This is a Child!
  </div>
</div>
`;
